--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ a:focus {
 
 #masthead{
   position: relative;
+  z-index: 200; /* trump slidebox */
 }
 #site-logo {
   float: left;
@@ -346,7 +347,7 @@ h1#site-title a:link, h1#site-title a:visited{
   display:none;
 }
 
-#main-menu {
+ #main-menu {
   padding:0px 0px;
   margin: 22px 0px 15px;
   height:45px;
@@ -364,6 +365,7 @@ h1#site-title a:link, h1#site-title a:visited{
   
 #main-menu li {
   float: left;
+  z-index: 101;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -387,7 +389,7 @@ h1#site-title a:link, h1#site-title a:visited{
 #main-menu li a.sf-with-ul {
   padding-right: 10px;
 } 
-
+/*
 #main-menu li ul li a, #main-menu li ul li a:link, #main-menu li ul li a:visited,
 #main-menu li ul li ul li a, #main-menu li ul li ul li a:link, #main-menu li ul li ul li a:visited,
 #main-menu li ul li ul li ul li a, #main-menu li ul li ul li ul li a:link, #main-menu li ul li ul li ul li a:visited {
@@ -408,17 +410,18 @@ h1#site-title a:link, h1#site-title a:visited{
 #main-menu li ul li a:hover ,#main-menu li ul li ul li a:hover ,#main-menu li ul li ul li ul li a:hover {
   color: #005FA1;
 }
-
+*/
 #main-menu li ul {
   font-size: 12px;
   z-index: 9999;
+  top: 50px;
   position: absolute;
   left: -999em;
   height: auto;
   width: 160px;
   margin: 0px 0px 0px 0px;
   padding: 5px 5px;
-  background:#efefef;
+  background: #eee;
 }
 
 #main-menu li ul a { 
